[package]
name = "e9571_str_lib"
version = "0.1.1"
edition = "2024"
description = "A Rust crate for string processing, sorting, counting, and hashing"
license = "MIT"
repository = "https://github.com/e9571/e9571_str_lib"
documentation = "https://docs.rs/e9571_str_lib"
homepage = "https://github.com/e9571"
keywords = ["string", "hashing", "sorting", "ascii", "cryptography"]
categories = ["text-processing", "cryptography", "algorithms"]


[dependencies]
sha3 = "0.11.0-rc.0"
num-bigint = "0.4.6"
e9571_lib1 = "0.1.0"
num-traits = "0.2.19"
